--- a/index.html
+++ b/index.html
@@ -2,31 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>여행 계획</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1>일본 여행 계획</h1>
-    <hr/>
-    <table border="1">
-        <tr>
-            <th>일</th>
-            <th>시간</th>
-            <th>여행지 및 활동</th>
-            <th>이미지</th>
-        </tr>
-        <tr>
-            <td>1일째</td>
-            <td>09:00</td>
-            <td>공항</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>1일째</td>
-            <td>13:00</td>
-            <td>호텔 체크인</td>
-            <td><img src="./images/japan1.jpg"></td>
-        </tr>
-    </table>
     
 </body>
 </html>
